Correction alignement saisie films

--- a/portail/moviehouse/styleMH.css
+++ b/portail/moviehouse/styleMH.css
@@ -108,7 +108,7 @@
 .name_saisie_rapide
 {
 	/* 50% */
-	width: 48%;
+	width: 48.5%;
 	border: solid 1px #a3a3a3;
 	padding-left: 1%;
 	padding-right: 1%;
